WIP greyscale syntax schemes

--- a/_sass/yolo/syntax-scheme/_grayscale.scss
+++ b/_sass/yolo/syntax-scheme/_grayscale.scss
@@ -1,181 +1,181 @@
 :root[light] {
-  --syntax-text: #44475a;
-  --syntax-container-color: #F4F4F4;
-  --syntax-highlight-color: #44475a;
+  --syntax-text: #e0e0e0;
+  --syntax-container-color: #0a0a0a;
+  --syntax-highlight-color: #e0e0e0;
 
-  --syntax-line-number-color: #44475a;
-  --syntax-line-number-background-color: #F4F4F4;
-  --syntax-line-number-special-color: #44475a;
-  --syntax-line-number-special-background-color: #F4F4F4;
+  --syntax-line-number-color: #e0e0e0;
+  --syntax-line-number-background-color: #0a0a0a;
+  --syntax-line-number-special-color: #e0e0e0;
+  --syntax-line-number-special-background-color: #0a0a0a;
 
-  --syntax-error: #898989; 
-  --syntax-punctuation: #44475a;
-  --syntax-text-whitespace: #bbbbbb; 
+  --syntax-error: #999999;
+  --syntax-punctuation: #e0e0e0;
+  --syntax-text-whitespace: #e0e0e0;
 
-  --syntax-comment-hashbang: #959595; 
-  --syntax-comment-multiline: #959595; 
-  --syntax-comment-preproc: #575757; 
-  --syntax-comment-preprocfile: #959595; 
-  --syntax-comment-single: #959595; 
-  --syntax-comment-special: #959595; 
-  --syntax-comment: #959595; 
+  --syntax-comment-hashbang: #8f8f8f;
+  --syntax-comment-multiline: #8f8f8f;
+  --syntax-comment-preproc: #8f8f8f;
+  --syntax-comment-preprocfile: #8f8f8f;
+  --syntax-comment-single: #8f8f8f;
+  --syntax-comment-special: #8f8f8f;
+  --syntax-comment: #8f8f8f;
 
-  --syntax-generic-deleted: #545454; 
-  --syntax-generic-emph: #545454; 
-  --syntax-generic-error: #898989; 
-  --syntax-generic-heading: #373737; 
-  --syntax-generic-inserted: #7D7D7D; 
-  --syntax-generic-output: #888888; 
-  --syntax-generic-prompt: #7E7E7E; 
-  --syntax-generic-strong: #373737; 
-  --syntax-generic-subheading: #5A5A5A; 
-  --syntax-generic-traceback: #6D6D6D; 
+  --syntax-generic-deleted: #5c5c5c;
+  --syntax-generic-emph: #5c5c5c;
+  --syntax-generic-error: #999999;
+  --syntax-generic-heading: #cccccc;
+  --syntax-generic-inserted: #7a7a7a;
+  --syntax-generic-output: #858585;
+  --syntax-generic-prompt: #e0e0e0;
+  --syntax-generic-strong: #cccccc;
+  --syntax-generic-subheading: #525252;
+  --syntax-generic-traceback: #7a7a7a;
 
-  --syntax-keyword-constant: #575757; 
-  --syntax-keyword-declaration: #575757; 
-  --syntax-keyword-namespace: #575757; 
-  --syntax-keyword-pseudo: #575757; 
-  --syntax-keyword-reserved: #575757; 
-  --syntax-keyword-type: #4F4F4F; 
-  --syntax-keyword: #575757; 
+  --syntax-keyword-constant: #ebebeb;
+  --syntax-keyword-declaration: #ebebeb;
+  --syntax-keyword-namespace: #ebebeb;
+  --syntax-keyword-pseudo: #ebebeb;
+  --syntax-keyword-reserved: #ebebeb;
+  --syntax-keyword-type: #b8b8b8;
+  --syntax-keyword: #ebebeb;
 
-  --syntax-literal-date: #44475a;
-  --syntax-literal: #44475a;
+  --syntax-literal-date: #e0e0e0;
+  --syntax-literal: #e0e0e0;
 
-  --syntax-name-attribute: #707070; 
-  --syntax-name-builtin-pseudo: #575757; 
-  --syntax-name-builtin: #575757; 
-  --syntax-name-class: #7E7E7E; 
-  --syntax-name-constant: #A5A5A5; 
-  --syntax-name-decorator: #555555; 
-  --syntax-name-entity: #848484; 
-  --syntax-name-exception: #575757; 
-  --syntax-name-function-magic: #3F3F3F; 
-  --syntax-name-function: #3F3F3F; 
-  --syntax-name-label: #363636; 
-  --syntax-name-namespace: #7E7E7E; 
-  --syntax-name-other: #9A9A9A; 
-  --syntax-name-tag: #3B3B3B; 
-  --syntax-name-variable-class: #9A9A9A; 
-  --syntax-name-variable-global: #9A9A9A; 
-  --syntax-name-variable-instance: #9A9A9A; 
-  --syntax-name-variable: #9A9A9A; 
-  --syntax-name: #44475a;
+  --syntax-name-attribute: #a3a3a3;
+  --syntax-name-builtin-pseudo: #ebebeb;
+  --syntax-name-builtin: #ebebeb;
+  --syntax-name-class: #e0e0e0;
+  --syntax-name-constant: #adadad;
+  --syntax-name-decorator: #f5f5f5;
+  --syntax-name-entity: #858585;
+  --syntax-name-exception: #ebebeb;
+  --syntax-name-function-magic: #ebebeb;
+  --syntax-name-function: #ebebeb;
+  --syntax-name-label: #fafafa;
+  --syntax-name-namespace: #e0e0e0;
+  --syntax-name-other: #a3a3a3;
+  --syntax-name-tag: #a3a3a3;
+  --syntax-name-variable-class: #cccccc;
+  --syntax-name-variable-global: #cccccc;
+  --syntax-name-variable-instance: #cccccc;
+  --syntax-name-variable: #cccccc;
+  --syntax-name: #e0e0e0;
 
-  --syntax-number-bin: #888888; 
-  --syntax-number-float: #888888; 
-  --syntax-number-hex: #888888; 
-  --syntax-number-integer-long: #888888; 
-  --syntax-number-integer: #888888; 
-  --syntax-number-oct: #888888; 
-  --syntax-number: #888888; 
+  --syntax-number-bin: #858585;
+  --syntax-number-float: #858585;
+  --syntax-number-hex: #858585;
+  --syntax-number-integer-long: #858585;
+  --syntax-number-integer: #858585;
+  --syntax-number-oct: #858585;
+  --syntax-number: #858585;
 
-  --syntax-operator-word: #575757; 
-  --syntax-operator: #666666; 
+  --syntax-operator-word: #ebebeb;
+  --syntax-operator: #ffffff;
 
-  --syntax-string-affix: #717171;
-  --syntax-string-backtick: #717171;
-  --syntax-string-char: #717171;
-  --syntax-string-delimiter: #717171;
-  --syntax-string-doc: #717171;
-  --syntax-string-double: #717171;
-  --syntax-string-escape: #717171;
-  --syntax-string-heredoc: #717171;
+  --syntax-string-affix: #f5f5f5;
+  --syntax-string-backtick: #f5f5f5;
+  --syntax-string-char: #f5f5f5;
+  --syntax-string-delimiter: #f5f5f5;
+  --syntax-string-doc: #f5f5f5;
+  --syntax-string-double: #b8b8b8;
+  --syntax-string-escape: #f5f5f5;
+  --syntax-string-heredoc: #f5f5f5;
   --syntax-string-interpol: #9F9F9F;
-  --syntax-string-other: #7E7E7E;
-  --syntax-string-regex: #575757;
-  --syntax-string-single: #717171;
-  --syntax-string-symbol: #676767;
-  --syntax-string: #717171; 
+  --syntax-string-other: #e0e0e0;
+  --syntax-string-regex: #ebebeb;
+  --syntax-string-single: #f5f5f5;
+  --syntax-string-symbol: #7a7a7a;
+  --syntax-string: #f5f5f5;
 }
 :root[dark] {
-  --syntax-text: #44475a;
-  --syntax-container-color: #F4F4F4;
-  --syntax-highlight-color: #44475a;
+  --syntax-text: #e0e0e0;
+  --syntax-container-color: #0a0a0a;
+  --syntax-highlight-color: #e0e0e0;
 
-  --syntax-line-number-color: #44475a;
-  --syntax-line-number-background-color: #F4F4F4;
-  --syntax-line-number-special-color: #44475a;
-  --syntax-line-number-special-background-color: #F4F4F4;
+  --syntax-line-number-color: #e0e0e0;
+  --syntax-line-number-background-color: #0a0a0a;
+  --syntax-line-number-special-color: #e0e0e0;
+  --syntax-line-number-special-background-color: #0a0a0a;
 
-  --syntax-error: #898989; 
-  --syntax-punctuation: #44475a;
-  --syntax-text-whitespace: #bbbbbb; 
+  --syntax-error: #999999;
+  --syntax-punctuation: #e0e0e0;
+  --syntax-text-whitespace: #e0e0e0;
 
-  --syntax-comment-hashbang: #959595; 
-  --syntax-comment-multiline: #959595; 
-  --syntax-comment-preproc: #575757; 
-  --syntax-comment-preprocfile: #959595; 
-  --syntax-comment-single: #959595; 
-  --syntax-comment-special: #959595; 
-  --syntax-comment: #959595; 
+  --syntax-comment-hashbang: #8f8f8f;
+  --syntax-comment-multiline: #8f8f8f;
+  --syntax-comment-preproc: #ebebeb;
+  --syntax-comment-preprocfile: #8f8f8f;
+  --syntax-comment-single: #8f8f8f;
+  --syntax-comment-special: #8f8f8f;
+  --syntax-comment: #8f8f8f;
 
-  --syntax-generic-deleted: #545454; 
-  --syntax-generic-emph: #545454; 
-  --syntax-generic-error: #898989; 
-  --syntax-generic-heading: #373737; 
-  --syntax-generic-inserted: #7D7D7D; 
-  --syntax-generic-output: #888888; 
-  --syntax-generic-prompt: #7E7E7E; 
-  --syntax-generic-strong: #373737; 
-  --syntax-generic-subheading: #5A5A5A; 
-  --syntax-generic-traceback: #6D6D6D; 
+  --syntax-generic-deleted: #5c5c5c;
+  --syntax-generic-emph: #5c5c5c;
+  --syntax-generic-error: #999999;
+  --syntax-generic-heading: #cccccc;
+  --syntax-generic-inserted: #7a7a7a;
+  --syntax-generic-output: #858585;
+  --syntax-generic-prompt: #e0e0e0;
+  --syntax-generic-strong: #cccccc;
+  --syntax-generic-subheading: #525252;
+  --syntax-generic-traceback: #7a7a7a;
 
-  --syntax-keyword-constant: #575757; 
-  --syntax-keyword-declaration: #575757; 
-  --syntax-keyword-namespace: #575757; 
-  --syntax-keyword-pseudo: #575757; 
-  --syntax-keyword-reserved: #575757; 
-  --syntax-keyword-type: #4F4F4F; 
-  --syntax-keyword: #575757; 
+  --syntax-keyword-constant: #ebebeb;
+  --syntax-keyword-declaration: #ebebeb;
+  --syntax-keyword-namespace: #ebebeb;
+  --syntax-keyword-pseudo: #ebebeb;
+  --syntax-keyword-reserved: #ebebeb;
+  --syntax-keyword-type: #b8b8b8;
+  --syntax-keyword: #ebebeb;
 
-  --syntax-literal-date: #44475a;
-  --syntax-literal: #44475a;
+  --syntax-literal-date: #e0e0e0;
+  --syntax-literal: #e0e0e0;
 
-  --syntax-name-attribute: #707070; 
-  --syntax-name-builtin-pseudo: #575757; 
-  --syntax-name-builtin: #575757; 
-  --syntax-name-class: #7E7E7E; 
-  --syntax-name-constant: #A5A5A5; 
-  --syntax-name-decorator: #555555; 
-  --syntax-name-entity: #848484; 
-  --syntax-name-exception: #575757; 
-  --syntax-name-function-magic: #3F3F3F; 
-  --syntax-name-function: #3F3F3F; 
-  --syntax-name-label: #363636; 
-  --syntax-name-namespace: #7E7E7E; 
-  --syntax-name-other: #9A9A9A; 
-  --syntax-name-tag: #3B3B3B; 
-  --syntax-name-variable-class: #9A9A9A; 
-  --syntax-name-variable-global: #9A9A9A; 
-  --syntax-name-variable-instance: #9A9A9A; 
-  --syntax-name-variable: #9A9A9A; 
-  --syntax-name: #44475a;
+  --syntax-name-attribute: #7a7a7a;
+  --syntax-name-builtin-pseudo: #ebebeb;
+  --syntax-name-builtin: #ebebeb;
+  --syntax-name-class: #e0e0e0;
+  --syntax-name-constant: #adadad;
+  --syntax-name-decorator: #f5f5f5;
+  --syntax-name-entity: #848484;
+  --syntax-name-exception: #ebebeb;
+  --syntax-name-function-magic: #ebebeb;
+  --syntax-name-function: #ebebeb;
+  --syntax-name-label: #fafafa;
+  --syntax-name-namespace: #e0e0e0;
+  --syntax-name-other: #cccccc;
+  --syntax-name-tag: #a3a3a3;
+  --syntax-name-variable-class: #cccccc;
+  --syntax-name-variable-global: #cccccc;
+  --syntax-name-variable-instance: #cccccc;
+  --syntax-name-variable: #cccccc;
+  --syntax-name: #e0e0e0;
 
-  --syntax-number-bin: #888888; 
-  --syntax-number-float: #888888; 
-  --syntax-number-hex: #888888; 
-  --syntax-number-integer-long: #888888; 
-  --syntax-number-integer: #888888; 
-  --syntax-number-oct: #888888; 
-  --syntax-number: #888888; 
+  --syntax-number-bin: #858585;
+  --syntax-number-float: #858585;
+  --syntax-number-hex: #858585;
+  --syntax-number-integer-long: #858585;
+  --syntax-number-integer: #858585;
+  --syntax-number-oct: #858585;
+  --syntax-number: #858585;
 
-  --syntax-operator-word: #575757; 
-  --syntax-operator: #666666; 
+  --syntax-operator-word: #ebebeb;
+  --syntax-operator: #7a7a7a;
 
-  --syntax-string-affix: #717171;
-  --syntax-string-backtick: #717171;
-  --syntax-string-char: #717171;
-  --syntax-string-delimiter: #717171;
-  --syntax-string-doc: #717171;
-  --syntax-string-double: #717171;
-  --syntax-string-escape: #717171;
-  --syntax-string-heredoc: #717171;
+  --syntax-string-affix: #f5f5f5;
+  --syntax-string-backtick: #f5f5f5;
+  --syntax-string-char: #f5f5f5;
+  --syntax-string-delimiter: #f5f5f5;
+  --syntax-string-doc: #f5f5f5;
+  --syntax-string-double: #f5f5f5;
+  --syntax-string-escape: #f5f5f5;
+  --syntax-string-heredoc: #f5f5f5;
   --syntax-string-interpol: #9F9F9F;
-  --syntax-string-other: #7E7E7E;
-  --syntax-string-regex: #575757;
-  --syntax-string-single: #717171;
+  --syntax-string-other: #e0e0e0;
+  --syntax-string-regex: #ebebeb;
+  --syntax-string-single: #f5f5f5;
   --syntax-string-symbol: #676767;
-  --syntax-string: #717171; 
+  --syntax-string: #f5f5f5;
 }
 
