--- a/_sass/yolo/syntax-scheme/_grayscale.scss
+++ b/_sass/yolo/syntax-scheme/_grayscale.scss
@@ -89,93 +89,93 @@
   --syntax-string: #f5f5f5;
 }
 :root[dark] {
-  --syntax-text: #e0e0e0;
-  --syntax-container-color: #0a0a0a;
-  --syntax-highlight-color: #e0e0e0;
+  --syntax-text: #212121;
+  --syntax-container-color: #f5f5f5;
+  --syntax-highlight-color: #212121;
 
-  --syntax-line-number-color: #e0e0e0;
-  --syntax-line-number-background-color: #0a0a0a;
-  --syntax-line-number-special-color: #e0e0e0;
-  --syntax-line-number-special-background-color: #0a0a0a;
+  --syntax-line-number-color: #212121;
+  --syntax-line-number-background-color: #f5f5f5;
+  --syntax-line-number-special-color: #212121;
+  --syntax-line-number-special-background-color: #f5f5f5;
 
-  --syntax-error: #999999;
-  --syntax-punctuation: #e0e0e0;
-  --syntax-text-whitespace: #e0e0e0;
+  --syntax-error: #707070;
+  --syntax-punctuation: #212121;
+  --syntax-text-whitespace: #212121;
 
-  --syntax-comment-hashbang: #8f8f8f;
-  --syntax-comment-multiline: #8f8f8f;
-  --syntax-comment-preproc: #ebebeb;
-  --syntax-comment-preprocfile: #8f8f8f;
-  --syntax-comment-single: #8f8f8f;
-  --syntax-comment-special: #8f8f8f;
-  --syntax-comment: #8f8f8f;
+  --syntax-comment-hashbang: #7a7a7a;
+  --syntax-comment-multiline: #7a7a7a;
+  --syntax-comment-preproc: #7a7a7a;
+  --syntax-comment-preprocfile: #7a7a7a;
+  --syntax-comment-single: #7a7a7a;
+  --syntax-comment-special: #7a7a7a;
+  --syntax-comment: #7a7a7a;
 
-  --syntax-generic-deleted: #5c5c5c;
-  --syntax-generic-emph: #5c5c5c;
-  --syntax-generic-error: #999999;
-  --syntax-generic-heading: #cccccc;
-  --syntax-generic-inserted: #7a7a7a;
-  --syntax-generic-output: #858585;
-  --syntax-generic-prompt: #e0e0e0;
-  --syntax-generic-strong: #cccccc;
+  --syntax-generic-deleted: #adadad;
+  --syntax-generic-emph: #adadad;
+  --syntax-generic-error: #707070;
+  --syntax-generic-heading: #3d3d3d;
+  --syntax-generic-inserted: #8f8f8f;
+  --syntax-generic-output: #7a7a7a;
+  --syntax-generic-prompt: #212121;
+  --syntax-generic-strong: #3d3d3d;
   --syntax-generic-subheading: #525252;
-  --syntax-generic-traceback: #7a7a7a;
+  --syntax-generic-traceback: #8f8f8f;
 
-  --syntax-keyword-constant: #ebebeb;
-  --syntax-keyword-declaration: #ebebeb;
-  --syntax-keyword-namespace: #ebebeb;
-  --syntax-keyword-pseudo: #ebebeb;
-  --syntax-keyword-reserved: #ebebeb;
-  --syntax-keyword-type: #b8b8b8;
-  --syntax-keyword: #ebebeb;
+  --syntax-keyword-constant: #1f1f1f;
+  --syntax-keyword-declaration: #1f1f1f;
+  --syntax-keyword-namespace: #1f1f1f;
+  --syntax-keyword-pseudo: #1f1f1f;
+  --syntax-keyword-reserved: #1f1f1f;
+  --syntax-keyword-type: #525252;
+  --syntax-keyword: #1f1f1f;
 
-  --syntax-literal-date: #e0e0e0;
-  --syntax-literal: #e0e0e0;
+  --syntax-literal-date: #212121;
+  --syntax-literal: #212121;
 
-  --syntax-name-attribute: #7a7a7a;
-  --syntax-name-builtin-pseudo: #ebebeb;
-  --syntax-name-builtin: #ebebeb;
-  --syntax-name-class: #e0e0e0;
-  --syntax-name-constant: #adadad;
-  --syntax-name-decorator: #f5f5f5;
-  --syntax-name-entity: #848484;
-  --syntax-name-exception: #ebebeb;
-  --syntax-name-function-magic: #ebebeb;
-  --syntax-name-function: #ebebeb;
-  --syntax-name-label: #fafafa;
-  --syntax-name-namespace: #e0e0e0;
-  --syntax-name-other: #cccccc;
-  --syntax-name-tag: #a3a3a3;
-  --syntax-name-variable-class: #cccccc;
-  --syntax-name-variable-global: #cccccc;
-  --syntax-name-variable-instance: #cccccc;
-  --syntax-name-variable: #cccccc;
-  --syntax-name: #e0e0e0;
+  --syntax-name-attribute: #707070;
+  --syntax-name-builtin-pseudo: #1f1f1f;
+  --syntax-name-builtin: #1f1f1f;
+  --syntax-name-class: #212121;
+  --syntax-name-constant: #000000;
+  --syntax-name-decorator: #000000;
+  --syntax-name-entity: #525252;
+  --syntax-name-exception: #1f1f1f;
+  --syntax-name-function-magic: #1f1f1f;
+  --syntax-name-function: #1f1f1f;
+  --syntax-name-label: #000000;
+  --syntax-name-namespace: #212121;
+  --syntax-name-other: #707070;
+  --syntax-name-tag: #707070;
+  --syntax-name-variable-class: #3d3d3d;
+  --syntax-name-variable-global: #3d3d3d;
+  --syntax-name-variable-instance: #3d3d3d;
+  --syntax-name-variable: #3d3d3d;
+  --syntax-name: #212121;
 
-  --syntax-number-bin: #858585;
-  --syntax-number-float: #858585;
-  --syntax-number-hex: #858585;
-  --syntax-number-integer-long: #858585;
-  --syntax-number-integer: #858585;
-  --syntax-number-oct: #858585;
-  --syntax-number: #858585;
+  --syntax-number-bin: #666666;
+  --syntax-number-float: #666666;
+  --syntax-number-hex: #666666;
+  --syntax-number-integer-long: #666666;
+  --syntax-number-integer: #666666;
+  --syntax-number-oct: #666666;
+  --syntax-number: #666666;
 
-  --syntax-operator-word: #ebebeb;
-  --syntax-operator: #7a7a7a;
+  --syntax-operator-word: #1f1f1f;
+  --syntax-operator: #000000;
 
-  --syntax-string-affix: #f5f5f5;
-  --syntax-string-backtick: #f5f5f5;
-  --syntax-string-char: #f5f5f5;
-  --syntax-string-delimiter: #f5f5f5;
-  --syntax-string-doc: #f5f5f5;
-  --syntax-string-double: #f5f5f5;
-  --syntax-string-escape: #f5f5f5;
-  --syntax-string-heredoc: #f5f5f5;
-  --syntax-string-interpol: #9F9F9F;
-  --syntax-string-other: #e0e0e0;
-  --syntax-string-regex: #ebebeb;
-  --syntax-string-single: #f5f5f5;
-  --syntax-string-symbol: #676767;
-  --syntax-string: #f5f5f5;
+  --syntax-string-affix: #141414;
+  --syntax-string-backtick: #141414;
+  --syntax-string-char: #141414;
+  --syntax-string-delimiter: #141414;
+  --syntax-string-doc: #141414;
+  --syntax-string-double: #333333;
+  --syntax-string-escape: #141414;
+  --syntax-string-heredoc: #141414;
+  --syntax-string-interpol: #474747;
+  --syntax-string-other: #212121;
+  --syntax-string-regex: #1f1f1f;
+  --syntax-string-single: #141414;
+  --syntax-string-symbol: #000000;
+  --syntax-string: #333333;
 }
 
