WIP syntax schemes and code copy refactor

--- a/_sass/yolo/syntax-scheme/_arcade.scss
+++ b/_sass/yolo/syntax-scheme/_arcade.scss
@@ -45,16 +45,16 @@
   --syntax-literal-date: #273239;
   --syntax-literal: #273239;
 
-  --syntax-name-attribute: #50fa7b;
+  --syntax-name-attribute: #009624;
   --syntax-name-builtin-pseudo: #273239;
   --syntax-name-builtin: #0ca9f4;
-  --syntax-name-class: #50fa7b;
+  --syntax-name-class: #009624;
   --syntax-name-constant: #273239;
   --syntax-name-decorator: #273239;
   --syntax-name-entity: #273239;
   --syntax-name-exception: #273239;
-  --syntax-name-function-magic: #50fa7b;
-  --syntax-name-function: #50fa7b;
+  --syntax-name-function-magic: #009624;
+  --syntax-name-function: #009624;
   --syntax-name-label: #0ca9f4;
   --syntax-name-namespace: #273239;
   --syntax-name-other: #273239;
