WIP syntax-scheme, new theme neon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="assets/js/theme.js"></script>
+    <script src="assets/js/snippets.js"></script>
     <!-- Main site stylesheet, generated via sass -->
     <link rel="stylesheet" href="css/main.css">
 </head>
