--- a/_sass/yolo/syntax-scheme/_arcade.scss
+++ b/_sass/yolo/syntax-scheme/_arcade.scss
@@ -1,183 +1,173 @@
 // ----------------------------------------------------------------------------
-// material scheme
+// arcade scheme
 // ----------------------------------------------------------------------------
 :root[light] {
-  --syntax-text: #424242;
-  --syntax-container-color: #fafafa;
-  --syntax-highlight-color: #ffeb3b;
+  --syntax-text: #010523;
+  --syntax-container-color: #f5f5f5;
+  --syntax-highlight-color: #44475a;
 
-  --syntax-line-number-color: #616161;
-  --syntax-line-number-background-color: #eeeeee;
-  --syntax-line-number-special-color: #0bbcd4;
-  --syntax-line-number-special-background-color: #e0e0e0;
+  --syntax-error: #b71c1c;
+  --syntax-punctuation: #010523;
+  --syntax-text-whitespace: #010523;
 
-  --syntax-error: #c62928;
-  --syntax-punctuation: #273239;
-  --syntax-text-whitespace: #273239;
+  --syntax-comment-hashbang: #44475a;
+  --syntax-comment-multiline: #44475a;
+  --syntax-comment-preproc: #44475a;
+  --syntax-comment-preprocfile: #44475a;
+  --syntax-comment-single: #44475a;
+  --syntax-comment-special: #44475a;
+  --syntax-comment: #44475a;
 
-  --syntax-comment-hashbang: #b5036a;
-  --syntax-comment-multiline: #b5036a;
-  --syntax-comment-preproc: #b5036a;
-  --syntax-comment-preprocfile: #b5036a;
-  --syntax-comment-single: #b5036a;
-  --syntax-comment-special: #b5036a;
-  --syntax-comment: #b5036a;
+  --syntax-generic-deleted: #b71c1c;
+  --syntax-generic-emph: #eb0f5a;
+  --syntax-generic-error: #b71c1c;
+  --syntax-generic-heading: #eb0f5a;
+  --syntax-generic-inserted: #eb0f5a;
+  --syntax-generic-output: #eb0f5a;
+  --syntax-generic-prompt: #eb0f5a;
+  --syntax-generic-strong: #eb0f5a;
+  --syntax-generic-subheading: #eb0f5a;
+  --syntax-generic-traceback: #eb0f5a;
 
-  --syntax-generic-deleted: #c62928;
-  --syntax-generic-emph: #273239;
-  --syntax-generic-error: #c62928;
-  --syntax-generic-heading: #273239;
-  --syntax-generic-inserted: #273239;
-  --syntax-generic-output: #273239;
-  --syntax-generic-prompt: #273239;
-  --syntax-generic-strong: #273239;
-  --syntax-generic-subheading: #273239;
-  --syntax-generic-traceback: #273239;
-
-  --syntax-keyword-constant: #fb1d9e;
+  --syntax-keyword-constant: #eb0f5a;
   --syntax-keyword-declaration: #0ca9f4;
-  --syntax-keyword-namespace: #fb1d9e;
-  --syntax-keyword-pseudo: #fb1d9e;
-  --syntax-keyword-reserved: #fb1d9e;
+  --syntax-keyword-namespace: #eb0f5a;
+  --syntax-keyword-pseudo: #eb0f5a;
+  --syntax-keyword-reserved: #eb0f5a;
   --syntax-keyword-type: #0ca9f4;
-  --syntax-keyword: #fb1d9e;
+  --syntax-keyword: #eb0f5a;
 
-  --syntax-literal-date: #273239;
-  --syntax-literal: #273239;
+  --syntax-literal-date: #ea5a03;
+  --syntax-literal: #ea5a03;
 
-  --syntax-name-attribute: #009624;
-  --syntax-name-builtin-pseudo: #273239;
+  --syntax-name-attribute: #2ab94f;
+  --syntax-name-builtin-pseudo: #010523;
   --syntax-name-builtin: #0ca9f4;
-  --syntax-name-class: #009624;
-  --syntax-name-constant: #273239;
-  --syntax-name-decorator: #273239;
-  --syntax-name-entity: #273239;
-  --syntax-name-exception: #273239;
-  --syntax-name-function-magic: #009624;
-  --syntax-name-function: #009624;
+  --syntax-name-class: #2ab94f;
+  --syntax-name-constant: #010523;
+  --syntax-name-decorator: #010523;
+  --syntax-name-entity: #010523;
+  --syntax-name-exception: #010523;
+  --syntax-name-function-magic: #2ab94f;
+  --syntax-name-function: #2ab94f;
   --syntax-name-label: #0ca9f4;
-  --syntax-name-namespace: #273239;
-  --syntax-name-other: #273239;
-  --syntax-name-tag: #fb1d9e;
+  --syntax-name-namespace: #010523;
+  --syntax-name-other: #010523;
+  --syntax-name-tag: #010523;
   --syntax-name-variable-class: #0ca9f4;
   --syntax-name-variable-global: #0ca9f4;
   --syntax-name-variable-instance: #0ca9f4;
   --syntax-name-variable: #0ca9f4;
-  --syntax-name: #273239;
+  --syntax-name: #010523;
 
-  --syntax-number-bin: #65cffc;
-  --syntax-number-float: #65cffc;
-  --syntax-number-hex: #65cffc;
-  --syntax-number-integer-long: #65cffc;
-  --syntax-number-integer: #65cffc;
-  --syntax-number-oct: #65cffc;
-  --syntax-number: #65cffc;
+  --syntax-number-bin: #ea5a03;
+  --syntax-number-float: #ea5a03;
+  --syntax-number-hex: #ea5a03;
+  --syntax-number-integer-long: #ea5a03;
+  --syntax-number-integer: #ea5a03;
+  --syntax-number-oct: #ea5a03;
+  --syntax-number: #ea5a03;
 
-  --syntax-operator-word: #fb1d9e;
-  --syntax-operator: #fb1d9e;
+  --syntax-operator-word: #2ab94f;
+  --syntax-operator: #2ab94f;
 
-  --syntax-string-affix: #7c85fa;
-  --syntax-string-backtick: #7c85fa;
-  --syntax-string-char: #7c85fa;
-  --syntax-string-delimiter: #7c85fa;
-  --syntax-string-doc: #7c85fa;
-  --syntax-string-double: #7c85fa;
-  --syntax-string-escape: #7c85fa;
-  --syntax-string-heredoc: #7c85fa;
-  --syntax-string-interpol: #7c85fa;
-  --syntax-string-other: #7c85fa;
-  --syntax-string-regex: #7c85fa;
-  --syntax-string-single: #7c85fa;
-  --syntax-string-symbol: #7c85fa;
-  --syntax-string: #7c85fa;
+  --syntax-string-affix: #6844f4;
+  --syntax-string-backtick: #6844f4;
+  --syntax-string-char: #6844f4;
+  --syntax-string-delimiter: #6844f4;
+  --syntax-string-doc: #6844f4;
+  --syntax-string-double: #6844f4;
+  --syntax-string-escape: #6844f4;
+  --syntax-string-heredoc: #6844f4;
+  --syntax-string-interpol: #6844f4;
+  --syntax-string-other: #6844f4;
+  --syntax-string-regex: #6844f4;
+  --syntax-string-single: #6844f4;
+  --syntax-string-symbol: #6844f4;
+  --syntax-string: #6844f4;
 }
 :root[dark] {
-  --syntax-text: #ecedff;
-  --syntax-container-color: #040511;
+  --syntax-text: #f7edff;
+  --syntax-container-color: #010523;
   --syntax-highlight-color: #44475a;
 
-  --syntax-line-number-color: #ecf8fe;
-  --syntax-line-number-background-color: #085f89;
-  --syntax-line-number-special-color: #0ca9f4;
-  --syntax-line-number-special-background-color: #010d13;
+  --syntax-error: #b71c1c;
+  --syntax-punctuation: #eff0ff;
+  --syntax-text-whitespace: #eff0ff;
 
-  --syntax-error: #ecedff;
-  --syntax-punctuation: #ecedff;
-  --syntax-text-whitespace: #ecedff;
-
-  --syntax-comment-hashbang: #b5036a;
-  --syntax-comment-multiline: #b5036a;
-  --syntax-comment-preproc: #b5036a;
-  --syntax-comment-preprocfile: #b5036a;
-  --syntax-comment-single: #b5036a;
-  --syntax-comment-special: #b5036a;
-  --syntax-comment: #b5036a;
+  --syntax-comment-hashbang: #ebde1d;
+  --syntax-comment-multiline: #ebde1d;
+  --syntax-comment-preproc: #ebde1d;
+  --syntax-comment-preprocfile: #ebde1d;
+  --syntax-comment-single: #ebde1d;
+  --syntax-comment-special: #ebde1d;
+  --syntax-comment: #ebde1d;
 
   --syntax-generic-deleted: #b71c1c;
-  --syntax-generic-emph: #ecedff;
-  --syntax-generic-error: #ecedff;
-  --syntax-generic-heading: #ecedff;
-  --syntax-generic-inserted: #ecedff;
-  --syntax-generic-output: #ecedff;
-  --syntax-generic-prompt: #ecedff;
-  --syntax-generic-strong: #ecedff;
-  --syntax-generic-subheading: #ecedff;
-  --syntax-generic-traceback: #ecedff;
+  --syntax-generic-emph: #eb0f5a;
+  --syntax-generic-error: #b71c1c;
+  --syntax-generic-heading: #eb0f5a;
+  --syntax-generic-inserted: #eb0f5a;
+  --syntax-generic-output: #eb0f5a;
+  --syntax-generic-prompt: #eb0f5a;
+  --syntax-generic-strong: #eb0f5a;
+  --syntax-generic-subheading: #eb0f5a;
+  --syntax-generic-traceback: #eb0f5a;
 
-  --syntax-keyword-constant: #fb1d9e;
+  --syntax-keyword-constant: #eb0f5a;
   --syntax-keyword-declaration: #0ca9f4;
-  --syntax-keyword-namespace: #fb1d9e;
-  --syntax-keyword-pseudo: #fb1d9e;
-  --syntax-keyword-reserved: #fb1d9e;
+  --syntax-keyword-namespace: #eb0f5a;
+  --syntax-keyword-pseudo: #eb0f5a;
+  --syntax-keyword-reserved: #eb0f5a;
   --syntax-keyword-type: #0ca9f4;
-  --syntax-keyword: #fb1d9e;
+  --syntax-keyword: #eb0f5a;
 
-  --syntax-literal-date: #ecedff;
-  --syntax-literal: #ecedff;
+  --syntax-literal-date: #ea5a03;
+  --syntax-literal: #ea5a03;
 
   --syntax-name-attribute: #50fa7b;
-  --syntax-name-builtin-pseudo: #ecedff;
+  --syntax-name-builtin-pseudo: #eff0ff;
   --syntax-name-builtin: #0ca9f4;
   --syntax-name-class: #50fa7b;
-  --syntax-name-constant: #ecedff;
-  --syntax-name-decorator: #ecedff;
-  --syntax-name-entity: #ecedff;
-  --syntax-name-exception: #ecedff;
+  --syntax-name-constant: #eff0ff;
+  --syntax-name-decorator: #eff0ff;
+  --syntax-name-entity: #eff0ff;
+  --syntax-name-exception: #eff0ff;
   --syntax-name-function-magic: #50fa7b;
   --syntax-name-function: #50fa7b;
   --syntax-name-label: #0ca9f4;
-  --syntax-name-namespace: #ecedff;
-  --syntax-name-other: #ecedff;
-  --syntax-name-tag: #fb1d9e;
+  --syntax-name-namespace: #eff0ff;
+  --syntax-name-other: #eff0ff;
+  --syntax-name-tag: #01e676;
   --syntax-name-variable-class: #0ca9f4;
   --syntax-name-variable-global: #0ca9f4;
   --syntax-name-variable-instance: #0ca9f4;
   --syntax-name-variable: #0ca9f4;
-  --syntax-name: #ecedff;
+  --syntax-name: #eff0ff;
 
-  --syntax-number-bin: #65cffc;
-  --syntax-number-float: #65cffc;
-  --syntax-number-hex: #65cffc;
-  --syntax-number-integer-long: #65cffc;
-  --syntax-number-integer: #65cffc;
-  --syntax-number-oct: #65cffc;
-  --syntax-number: #65cffc;
+  --syntax-number-bin: #ea5a03;
+  --syntax-number-float: #ea5a03;
+  --syntax-number-hex: #ea5a03;
+  --syntax-number-integer-long: #ea5a03;
+  --syntax-number-integer: #ea5a03;
+  --syntax-number-oct: #ea5a03;
+  --syntax-number: #ea5a03;
 
-  --syntax-operator-word: #fb1d9e;
-  --syntax-operator: #fb1d9e;
+  --syntax-operator-word: #01e676;
+  --syntax-operator: #01e676;
 
-  --syntax-string-affix: #7c85fa;
-  --syntax-string-backtick: #7c85fa;
-  --syntax-string-char: #7c85fa;
-  --syntax-string-delimiter: #7c85fa;
-  --syntax-string-doc: #7c85fa;
-  --syntax-string-double: #7c85fa;
-  --syntax-string-escape: #7c85fa;
-  --syntax-string-heredoc: #7c85fa;
-  --syntax-string-interpol: #7c85fa;
-  --syntax-string-other: #7c85fa;
-  --syntax-string-regex: #7c85fa;
-  --syntax-string-single: #7c85fa;
-  --syntax-string-symbol: #7c85fa;
-  --syntax-string: #7c85fa;
+  --syntax-string-affix: #9178f6;
+  --syntax-string-backtick: #9178f6;
+  --syntax-string-char: #9178f6;
+  --syntax-string-delimiter: #9178f6;
+  --syntax-string-doc: #9178f6;
+  --syntax-string-double: #9178f6;
+  --syntax-string-escape: #9178f6;
+  --syntax-string-heredoc: #9178f6;
+  --syntax-string-interpol: #9178f6;
+  --syntax-string-other: #9178f6;
+  --syntax-string-regex: #9178f6;
+  --syntax-string-single: #9178f6;
+  --syntax-string-symbol: #9178f6;
+  --syntax-string: #9178f6;
 }
