--- a/_sass/yolo/syntax-theme/_newspaper.scss
+++ b/_sass/yolo/syntax-theme/_newspaper.scss
@@ -1,3 +1,6 @@
+// ----------------------------------------------------------------------------
+// newspaper syntax-theme
+// ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #e0e0e0;
   --syntax-container-color: #0a0a0a;
