--- a/_sass/yolo/themes/_skeletor.scss
+++ b/_sass/yolo/themes/_skeletor.scss
@@ -4,7 +4,7 @@
 :root[light] {
   // primary colors
   --primary-color: #dbddf8;
-  --on-primary-color: #1a0037;
+  --on-primary-color: #27174f;
   --primary-container-color: #f4f5fb;
   --on-primary-container-color: #6843c8;
   // secondary colors
@@ -21,13 +21,6 @@
   --link-color: #1291f4;
   --neutral-color: #212121;
   --on-neutral-color: #e0e0e0;
-  // error, warn and info colors
-  --error-color: #b71c1c;
-  --on-error-color: #ffcdd2;
-  --warn-color: #212121;
-  --on-warn-color: #ffee58;
-  --info-color: #1565c0;
-  --on-info-color: #bbdefb;
   // font families
   --font-family-primary: "Inconsolata", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
@@ -35,10 +28,10 @@
 }
 :root[dark] {
   // primary colors
-  --primary-color: #1a0037;
-  --on-primary-color: #bdb7cf;
-  --primary-container-color: #100020;
-  --on-primary-container-color: #b4a9e9;
+  --primary-color: #28034e;
+  --on-primary-color: #f5ecfe;
+  --primary-container-color: #1a0035;
+  --on-primary-container-color: #f5ecfe;
   // secondary colors
   --secondary-color: #8f67fe;
   --on-secondary-color: #000;
@@ -53,13 +46,6 @@
   --link-color: #65e9fc;
   --neutral-color: #212121;
   --on-neutral-color: #e0e0e0;
-  // error, warn and info colors
-  --error-color: #b71c1c;
-  --on-error-color: #ffcdd2;
-  --warn-color: #212121;
-  --on-warn-color: #ffee58;
-  --info-color: #1565c0;
-  --on-info-color: #bbdefb;
   // font families
   --font-family-primary: "Inconsolata", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
