WIP improve skeletor theme

--- a/_sass/yolo/themes/_skeletor.scss
+++ b/_sass/yolo/themes/_skeletor.scss
@@ -5,18 +5,18 @@
   // primary colors
   --primary-color: #dbddf8;
   --on-primary-color: #27174f;
-  --primary-container-color: #f4f5fb;
-  --on-primary-container-color: #6843c8;
+  --primary-container-color: #28034e;
+  --on-primary-container-color: #dbddf8;
   // secondary colors
   --secondary-color: #502eb9;
-  --on-secondary-color: #fff;
-  --secondary-container-color: #424242;
-  --on-secondary-container-color: #f5f5f5;
+  --on-secondary-color: #dbddf8;
+  --secondary-container-color: #1a0035;
+  --on-secondary-container-color: #dbddf8;
   // tertiary colors
-  --tertiary-color: #1f56d8;
-  --on-tertiary-color: #fafafa;
-  --tertiary-container-color: #0b1e4a;
-  --on-tertiary-container-color: #f5f5f5;
+  --tertiary-color: #0633e0;
+  --on-tertiary-color: #dbddf8;
+  --tertiary-container-color: #020c37;
+  --on-tertiary-container-color: #dbddf8;
   // general colors
   --link-color: #1291f4;
   --neutral-color: #212121;
