--- a/_sass/yolo/_theme.scss
+++ b/_sass/yolo/_theme.scss
@@ -58,20 +58,31 @@
     }
   }
 
-  th {
-    border-top: 1px solid var(--secondary-color);
-  }
-
-  th, td {
-    border-bottom: 1px solid var(--secondary-color);
-    border-left: 1px solid var(--secondary-color);
-    border-right: 1px solid var(--secondary-color);
-  }
-
-  thead {
-    background-color: var(--secondary-color);
-    color: var(--on-secondary-color);
-    font-family: var(--font-family-secondary);
+  table {
+    background-color: var(--primary-color);
+    border: 1px solid var(--secondary-color);
+    th {
+      font-family: var(--font-family-secondary);
+      background-color: var(--secondary-color);
+      color: var(--on-secondary-color);
+    }
+    th:not(:last-child),
+    td:not(:last-child) {
+      border-right: 1px solid var(--secondary-color);
+    }
+    thead>tr:not(:last-child)>th,
+    thead>tr:not(:last-child)>td,
+    tbody>tr:not(:last-child)>th,
+    tbody>tr:not(:last-child)>td,
+    tfoot>tr:not(:last-child)>th,
+    tfoot>tr:not(:last-child)>td,
+    tr:not(:last-child)>td,
+    tr:not(:last-child)>th,
+    thead:not(:last-child),
+    tbody:not(:last-child),
+    tfoot:not(:last-child) {
+      border-bottom: 1px solid var(--secondary-color);
+    }
   }
 
   .yolo-header {
