Refactored solo theme

--- a/_sass/yolo/themes/_reveal.scss
+++ b/_sass/yolo/themes/_reveal.scss
@@ -1,12 +1,12 @@
 // ----------------------------------------------------------------------------
-// hint theme
+// reveal theme
 // ----------------------------------------------------------------------------
 :root[light] {
   // primary colors
   --primary-color: #fefcfb;
   --on-primary-color: #091129;
   --primary-container-color: #091129;
-  --on-primary-container-color: #fefcfb;
+  --on-primary-container-color: #f72685;
   // secondary colors
   --secondary-color: #06a6dc;
   --on-secondary-color: #ebfaff;
@@ -31,7 +31,7 @@
   --primary-color: #091129;
   --on-primary-color: #fefcfb;
   --primary-container-color: #fefcfb;
-  --on-primary-container-color: #091129;
+  --on-primary-container-color: #ec0a6f;
   // secondary colors
   --secondary-color: #06a6dc;
   --on-secondary-color: #ebfaff;
