--- a/_sass/yolo/themes/_yolo.scss
+++ b/_sass/yolo/themes/_yolo.scss
@@ -6,7 +6,7 @@
   --primary-color: #d2d2f3;
   --on-primary-color: #011141;
   --primary-container-color: #070831;
-  --on-primary-container-color: #949bfa;
+  --on-primary-container-color: #50fa7b;
   // secondary colors  
   --secondary-color: #5815c0;
   --on-secondary-color: #d2d2f3;
@@ -22,7 +22,7 @@
   --neutral-color: #212121;
   --on-neutral-color: #e0e0e0;
   // font families
-  --font-family-primary: "JetBrains Mono", monospace;
+  --font-family-primary: "Red Hat Mono", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
   --font-family-monospace: "Source Code Pro", monospace;
 }
@@ -31,7 +31,7 @@
   --primary-color: #070831;
   --on-primary-color: #b1b6fa;
   --primary-container-color: #040511;
-  --on-primary-container-color: #7c85fa;
+  --on-primary-container-color: #50fa7b;
   // secondary colors  
   --secondary-color: #fb1d9e;
   --on-secondary-color: #19010f;
@@ -47,7 +47,7 @@
   --neutral-color: #e0e0e0;
   --on-neutral-color: #212121;  
   // font families
-  --font-family-primary: "JetBrains Mono", monospace;
+  --font-family-primary: "Red Hat Mono", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
   --font-family-monospace: "Source Code Pro", monospace;
 }
