--- a/_sass/yolo/syntax-theme/_reveal.scss
+++ b/_sass/yolo/syntax-theme/_reveal.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// hint syntax-theme
+// reveal syntax-theme
 // ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #fefcfb;
