Adding dusk theme, remove unused tertiary-container color var

--- a/src/samples/yolo-dallas/_sass/yolo/themes/_neon.scss
+++ b/src/samples/yolo-dallas/_sass/yolo/themes/_neon.scss
@@ -15,6 +15,8 @@
   // tertiary colors  
   --tertiary-color: #f9246c;
   --on-tertiary-color: #feebf2;
+  --tertiary-container-color: #b5036a;
+  --on-tertiary-container-color: #f6a5d4; 
   // general colors    
   --link-color: #4597ff;
   --neutral-color: #212121;
@@ -38,6 +40,8 @@
   // tertiary colors  
   --tertiary-color: #3b6afe;
   --on-tertiary-color: #090b35;
+  --tertiary-container-color: #bf3efd;
+  --on-tertiary-container-color: #f5ebff;
   // general colors  
   --link-color: #4f9dff;
   --neutral-color: #e0e0e0;
