--- a/_sass/yolo/syntax-theme/_monokai.scss
+++ b/_sass/yolo/syntax-theme/_monokai.scss
@@ -2,13 +2,12 @@
 // monokai scheme
 // ----------------------------------------------------------------------------
 :root[light] {
-  --syntax-text: #f8f8f2;
-  --syntax-container-color: #272822;
-  --syntax-highlight-color: #49483e;
+  --syntax-text: #e8e6e5;
+  --syntax-container-color: #212121;
 
-  --syntax-error: #960050;
-  --syntax-punctuation: #f8f8f2;
-  --syntax-text-whitespace: #f8f8f2;
+  --syntax-error: #ff6288;
+  --syntax-punctuation: #e8e6e5;
+  --syntax-text-whitespace: #e8e6e5;
 
   --syntax-comment-hashbang: #75715e;
   --syntax-comment-multiline: #75715e;
@@ -18,157 +17,156 @@
   --syntax-comment-special: #75715e;
   --syntax-comment: #75715e;
 
-  --syntax-generic-deleted: #f92672;
-  --syntax-generic-emph: #f8f8f2;
-  --syntax-generic-error: #f8f8f2;
-  --syntax-generic-heading: #f8f8f2;
-  --syntax-generic-inserted: #a6e22e;
-  --syntax-generic-output: #44475a;
-  --syntax-generic-prompt: #f8f8f2;
-  --syntax-generic-strong: #f8f8f2;
-  --syntax-generic-subheading: #75715e;
-  --syntax-generic-traceback: #f8f8f2;
+  --syntax-generic-deleted: #ff6288;
+  --syntax-generic-emph: #fc9867;
+  --syntax-generic-error: #fc9867;
+  --syntax-generic-heading: #fc9867;
+  --syntax-generic-inserted: #fc9867;
+  --syntax-generic-output: #fc9867;
+  --syntax-generic-prompt: #fc9867;
+  --syntax-generic-strong: #fc9867;
+  --syntax-generic-subheading: #fc9867;
+  --syntax-generic-traceback: #fc9867;
 
-  --syntax-keyword-constant: #66d9ef;
-  --syntax-keyword-declaration: #66d9ef;
-  --syntax-keyword-namespace: #f92672;
-  --syntax-keyword-pseudo: #66d9ef;
-  --syntax-keyword-reserved: #66d9ef;
-  --syntax-keyword-type: #66d9ef;
-  --syntax-keyword: #66d9ef;
+  --syntax-keyword-constant: #79dce8;
+  --syntax-keyword-declaration: #79dce8;
+  --syntax-keyword-namespace: #ff6288;
+  --syntax-keyword-pseudo: #79dce8;
+  --syntax-keyword-reserved: #79dce8;
+  --syntax-keyword-type: #79dce8;
+  --syntax-keyword: #79dce8;
 
-  --syntax-literal-date: #e6db74;
-  --syntax-literal: #ae81ff;
+  --syntax-literal-date: #ffd966;
+  --syntax-literal: #ffd966;
 
-  --syntax-name-attribute: #a6e22e;
-  --syntax-name-builtin-pseudo: #f8f8f2;
-  --syntax-name-builtin: #f8f8f2;
-  --syntax-name-class: #a6e22e;
-  --syntax-name-constant: #66d9ef;
-  --syntax-name-decorator: #a6e22e;
+  --syntax-name-attribute: #a9dd76;
+  --syntax-name-builtin-pseudo: #e8e6e5;
+  --syntax-name-builtin: #e8e6e5;
+  --syntax-name-class: #a9dd76;
+  --syntax-name-constant: #79dce8;
+  --syntax-name-decorator: #a9dd76;
   --syntax-name-entity: #f8f8f2;
-  --syntax-name-exception: #a6e22e;
-  --syntax-name-function-magic: #a6e22e;
-  --syntax-name-function: #a6e22e;
-  --syntax-name-label: #f8f8f2;
-  --syntax-name-namespace: #f8f8f2;
-  --syntax-name-other: #a6e22e;
-  --syntax-name-tag: #f92672;
-  --syntax-name-variable-class: #f8f8f2;
-  --syntax-name-variable-global: #f8f8f2;
-  --syntax-name-variable-instance: #f8f8f2;
-  --syntax-name-variable: #f8f8f2;
-  --syntax-name: #f8f8f2;
+  --syntax-name-exception: #a9dd76;
+  --syntax-name-function-magic: #a9dd76;
+  --syntax-name-function: #a9dd76;
+  --syntax-name-label: #e8e6e5;
+  --syntax-name-namespace: #e8e6e5;
+  --syntax-name-other: #a9dd76;
+  --syntax-name-tag: #ff6288;
+  --syntax-name-variable-class: #e8e6e5;
+  --syntax-name-variable-global: #e8e6e5;
+  --syntax-name-variable-instance: #e8e6e5;
+  --syntax-name-variable: #e8e6e5;
+  --syntax-name: #e8e6e5;
 
-  --syntax-number-bin: #ae81ff;
-  --syntax-number-float: #ae81ff;
-  --syntax-number-hex: #ae81ff;
-  --syntax-number-integer-long: #ae81ff;
-  --syntax-number-integer: #ae81ff;
-  --syntax-number-oct: #ae81ff;
-  --syntax-number: #ae81ff;
+  --syntax-number-bin: #ac9df2;
+  --syntax-number-float: #ac9df2;
+  --syntax-number-hex: #ac9df2;
+  --syntax-number-integer-long: #ac9df2;
+  --syntax-number-integer: #ac9df2;
+  --syntax-number-oct: #ac9df2;
+  --syntax-number: #ac9df2;
 
-  --syntax-operator-word: #f92672;
-  --syntax-operator: #f92672;
+  --syntax-operator-word: #ff6288;
+  --syntax-operator: #ff6288;
 
-  --syntax-string-affix: #e6db74;
-  --syntax-string-backtick: #e6db74;
-  --syntax-string-char: #e6db74;
-  --syntax-string-delimiter: #e6db74;
-  --syntax-string-doc: #e6db74;
-  --syntax-string-double: #e6db74;
-  --syntax-string-escape: #ae81ff;
-  --syntax-string-heredoc: #e6db74;
-  --syntax-string-interpol: #e6db74;
-  --syntax-string-other: #e6db74;
-  --syntax-string-regex: #e6db74;
-  --syntax-string-single: #e6db74;
-  --syntax-string-symbol: #e6db74;
-  --syntax-string: #e6db74;
+  --syntax-string-affix: #ffd966;
+  --syntax-string-backtick: #ffd966;
+  --syntax-string-char: #ffd966;
+  --syntax-string-delimiter: #ffd966;
+  --syntax-string-doc: #ffd966;
+  --syntax-string-double: #ffd966;
+  --syntax-string-escape: #ac9df2;
+  --syntax-string-heredoc: #ffd966;
+  --syntax-string-interpol: #ffd966;
+  --syntax-string-other: #ffd966;
+  --syntax-string-regex: #ffd966;
+  --syntax-string-single: #ffd966;
+  --syntax-string-symbol: #ffd966;
+  --syntax-string: #ffd966;
 }
 :root[dark] {
-  --syntax-text: #f8f8f2;
-  --syntax-container-color: #272822;
-  --syntax-highlight-color: #49483e;
+  --syntax-text: #e8e6e5;
+--syntax-container-color: #212121;
 
-  --syntax-error: #960050;
-  --syntax-punctuation: #f8f8f2;
-  --syntax-text-whitespace: #f8f8f2;
+--syntax-error: #ff6288;
+--syntax-punctuation: #e8e6e5;
+--syntax-text-whitespace: #e8e6e5;
 
-  --syntax-comment-hashbang: #75715e;
-  --syntax-comment-multiline: #75715e;
-  --syntax-comment-preproc: #75715e;
-  --syntax-comment-preprocfile: #75715e;
-  --syntax-comment-single: #75715e;
-  --syntax-comment-special: #75715e;
-  --syntax-comment: #75715e;
+--syntax-comment-hashbang: #75715e;
+--syntax-comment-multiline: #75715e;
+--syntax-comment-preproc: #75715e;
+--syntax-comment-preprocfile: #75715e;
+--syntax-comment-single: #75715e;
+--syntax-comment-special: #75715e;
+--syntax-comment: #75715e;
 
-  --syntax-generic-deleted: #f92672;
-  --syntax-generic-emph: #f8f8f2;
-  --syntax-generic-error: #f8f8f2;
-  --syntax-generic-heading: #f8f8f2;
-  --syntax-generic-inserted: #a6e22e;
-  --syntax-generic-output: #44475a;
-  --syntax-generic-prompt: #f8f8f2;
-  --syntax-generic-strong: #f8f8f2;
-  --syntax-generic-subheading: #75715e;
-  --syntax-generic-traceback: #f8f8f2;
+--syntax-generic-deleted: #ff6288;
+--syntax-generic-emph: #fc9867;
+--syntax-generic-error: #fc9867;
+--syntax-generic-heading: #fc9867;
+--syntax-generic-inserted: #fc9867;
+--syntax-generic-output: #fc9867;
+--syntax-generic-prompt: #fc9867;
+--syntax-generic-strong: #fc9867;
+--syntax-generic-subheading: #fc9867;
+--syntax-generic-traceback: #fc9867;
 
-  --syntax-keyword-constant: #66d9ef;
-  --syntax-keyword-declaration: #66d9ef;
-  --syntax-keyword-namespace: #f92672;
-  --syntax-keyword-pseudo: #66d9ef;
-  --syntax-keyword-reserved: #66d9ef;
-  --syntax-keyword-type: #66d9ef;
-  --syntax-keyword: #66d9ef;
+--syntax-keyword-constant: #79dce8;
+--syntax-keyword-declaration: #79dce8;
+--syntax-keyword-namespace: #ff6288;
+--syntax-keyword-pseudo: #79dce8;
+--syntax-keyword-reserved: #79dce8;
+--syntax-keyword-type: #79dce8;
+--syntax-keyword: #79dce8;
 
-  --syntax-literal-date: #e6db74;
-  --syntax-literal: #ae81ff;
+--syntax-literal-date: #ffd966;
+--syntax-literal: #ffd966;
 
-  --syntax-name-attribute: #a6e22e;
-  --syntax-name-builtin-pseudo: #f8f8f2;
-  --syntax-name-builtin: #f8f8f2;
-  --syntax-name-class: #a6e22e;
-  --syntax-name-constant: #66d9ef;
-  --syntax-name-decorator: #a6e22e;
-  --syntax-name-entity: #f8f8f2;
-  --syntax-name-exception: #a6e22e;
-  --syntax-name-function-magic: #a6e22e;
-  --syntax-name-function: #a6e22e;
-  --syntax-name-label: #f8f8f2;
-  --syntax-name-namespace: #f8f8f2;
-  --syntax-name-other: #a6e22e;
-  --syntax-name-tag: #f92672;
-  --syntax-name-variable-class: #f8f8f2;
-  --syntax-name-variable-global: #f8f8f2;
-  --syntax-name-variable-instance: #f8f8f2;
-  --syntax-name-variable: #f8f8f2;
-  --syntax-name: #f8f8f2;
+--syntax-name-attribute: #a9dd76;
+--syntax-name-builtin-pseudo: #e8e6e5;
+--syntax-name-builtin: #e8e6e5;
+--syntax-name-class: #a9dd76;
+--syntax-name-constant: #79dce8;
+--syntax-name-decorator: #a9dd76;
+--syntax-name-entity: #f8f8f2;
+--syntax-name-exception: #a9dd76;
+--syntax-name-function-magic: #a9dd76;
+--syntax-name-function: #a9dd76;
+--syntax-name-label: #e8e6e5;
+--syntax-name-namespace: #e8e6e5;
+--syntax-name-other: #a9dd76;
+--syntax-name-tag: #ff6288;
+--syntax-name-variable-class: #e8e6e5;
+--syntax-name-variable-global: #e8e6e5;
+--syntax-name-variable-instance: #e8e6e5;
+--syntax-name-variable: #e8e6e5;
+--syntax-name: #e8e6e5;
 
-  --syntax-number-bin: #ae81ff;
-  --syntax-number-float: #ae81ff;
-  --syntax-number-hex: #ae81ff;
-  --syntax-number-integer-long: #ae81ff;
-  --syntax-number-integer: #ae81ff;
-  --syntax-number-oct: #ae81ff;
-  --syntax-number: #ae81ff;
+--syntax-number-bin: #ac9df2;
+--syntax-number-float: #ac9df2;
+--syntax-number-hex: #ac9df2;
+--syntax-number-integer-long: #ac9df2;
+--syntax-number-integer: #ac9df2;
+--syntax-number-oct: #ac9df2;
+--syntax-number: #ac9df2;
 
-  --syntax-operator-word: #f92672;
-  --syntax-operator: #f92672;
+--syntax-operator-word: #ff6288;
+--syntax-operator: #ff6288;
 
-  --syntax-string-affix: #e6db74;
-  --syntax-string-backtick: #e6db74;
-  --syntax-string-char: #e6db74;
-  --syntax-string-delimiter: #e6db74;
-  --syntax-string-doc: #e6db74;
-  --syntax-string-double: #e6db74;
-  --syntax-string-escape: #ae81ff;
-  --syntax-string-heredoc: #e6db74;
-  --syntax-string-interpol: #e6db74;
-  --syntax-string-other: #e6db74;
-  --syntax-string-regex: #e6db74;
-  --syntax-string-single: #e6db74;
-  --syntax-string-symbol: #e6db74;
-  --syntax-string: #e6db74;
+--syntax-string-affix: #ffd966;
+--syntax-string-backtick: #ffd966;
+--syntax-string-char: #ffd966;
+--syntax-string-delimiter: #ffd966;
+--syntax-string-doc: #ffd966;
+--syntax-string-double: #ffd966;
+--syntax-string-escape: #ac9df2;
+--syntax-string-heredoc: #ffd966;
+--syntax-string-interpol: #ffd966;
+--syntax-string-other: #ffd966;
+--syntax-string-regex: #ffd966;
+--syntax-string-single: #ffd966;
+--syntax-string-symbol: #ffd966;
+--syntax-string: #ffd966;
 }
 
