--- a/_sass/yolo/syntax-themes/_dracula.scss
+++ b/_sass/yolo/syntax-themes/_dracula.scss
@@ -1,3 +1,6 @@
+// ----------------------------------------------------------------------------
+// dracula syntax theme
+// ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #f8f8f2;
   --syntax-container-color: #282a36;
