--- a/_sass/yolo/syntax-themes/_dusk.scss
+++ b/_sass/yolo/syntax-themes/_dusk.scss
@@ -1,3 +1,6 @@
+// ----------------------------------------------------------------------------
+// dusk syntax theme
+// ----------------------------------------------------------------------------
 :root[dark] {
   --syntax-text: #380749;
   --syntax-container-color: #fff3eb;
