--- a/_sass/yolo/syntax-themes/_monokai.scss
+++ b/_sass/yolo/syntax-themes/_monokai.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// monokai scheme
+// monokai syntax scheme
 // ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #e8e6e5;
