--- a/_sass/yolo/syntax-themes/_neon.scss
+++ b/_sass/yolo/syntax-themes/_neon.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// skeletor syntax scheme
+// neon syntax theme
 // ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #cacef7;
