--- a/_sass/yolo/syntax-themes/_solo.scss
+++ b/_sass/yolo/syntax-themes/_solo.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// solo syntax-theme
+// solo syntax theme
 // ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #fff;
