--- a/_sass/yolo/syntax-themes/_yolo.scss
+++ b/_sass/yolo/syntax-themes/_yolo.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// yolo scheme
+// yolo syntax theme
 // ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #d2d2f3;
