--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@
 
 @import "yolo/variables";
 @import "yolo/themes/{{ site.data.settings.theme.name | default: 'yolo' }}";
-@import "yolo/syntax-theme/{{ site.data.settings.theme.syntax | default: 'yolo' }}";
+@import "yolo/syntax-themes/{{ site.data.settings.theme.syntax | default: 'yolo' }}";
 @import "yolo/theme";
 @import "yolo/normalize";
 @import "yolo/base";
