--- a/_sass/yolo/syntax-themes/_newspaper.scss
+++ b/_sass/yolo/syntax-themes/_newspaper.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// newspaper syntax-theme
+// newspaper syntax theme
 // ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #e0e0e0;
