--- a/_sass/yolo/syntax-themes/_reveal.scss
+++ b/_sass/yolo/syntax-themes/_reveal.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// reveal syntax-theme
+// reveal syntax theme
 // ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #fefcfb;
