--- a/_sass/yolo/syntax-themes/_sprinkles.scss
+++ b/_sass/yolo/syntax-themes/_sprinkles.scss
@@ -1,5 +1,5 @@
 //----------------------------------------------------------------------------
-// color scheme
+// sprinkles syntax theme
 //----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #fafafa;
