Done with seven built-in themes

--- a/_sass/yolo/syntax-themes/_neo.scss
+++ b/_sass/yolo/syntax-themes/_neo.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// neon syntax theme
+// neo syntax theme
 // ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #cacef7;
