Done with themes

--- a/_sass/yolo/themes/_neo.scss
+++ b/_sass/yolo/themes/_neo.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// neon theme
+// neo theme
 // ----------------------------------------------------------------------------
 :root[light] {
   // primary colors
