--- a/_sass/yolo/themes/_yolo.scss
+++ b/_sass/yolo/themes/_yolo.scss
@@ -26,9 +26,9 @@
 }
 :root[dark] {
   // primary colors
-  --primary-color: #070831;
+  --primary-color: #0a0b47;
   --on-primary-color: #b1b6fa;
-  --primary-container-color: #040511;
+  --primary-container-color: #070831;
   --on-primary-container-color: #50fa7b;
   // secondary colors  
   --secondary-color: #fb1d9e;
