--- a/_sass/yolo/_yolo.scss
+++ b/_sass/yolo/_yolo.scss
@@ -3,6 +3,10 @@
 // ----------------------------------------------------------------------------
 @import "variables";
 
+.red {
+  background: red;
+}
+
 // Yolo page header
 .yolo-header {
   .logo {
