WIP _sass clean-up

--- a/_sass/yolo/_yolo.scss
+++ b/_sass/yolo/_yolo.scss
@@ -1,11 +1,7 @@
 // ----------------------------------------------------------------------------
 // yolo specific classes
 // ----------------------------------------------------------------------------
-@import "variables";
-
-.red {
-  background: red;
-}
+@import "base/variables";
 
 // Yolo page header
 .yolo-header {
