--- a/_sass/yolo/themes/_neo.scss
+++ b/_sass/yolo/themes/_neo.scss
@@ -20,7 +20,7 @@
   --neutral-color: #212121;
   --on-neutral-color: #e0e0e0;
   // font families  
-  --font-family-primary: "JetBrains Mono", monospace;
+  --font-family-primary: "Red Hat Mono", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
   --font-family-monospace: "Source Code Pro", monospace;
 }
@@ -43,7 +43,7 @@
   --neutral-color: #e0e0e0;
   --on-neutral-color: #212121;  
   // font families  
-  --font-family-primary: "JetBrains Mono", monospace;
+  --font-family-primary: "Red Hat Mono", monospace;
   --font-family-secondary: "Red Hat Text", sans-serif;
   --font-family-monospace: "Source Code Pro", monospace;
 }
