--- a/_sass/yolo/_layout.scss
+++ b/_sass/yolo/_layout.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // Layout support
 // ----------------------------------------------------------------------------
-@import "variables";
+@import "base/variables";
 @import "responsiveness";
 
 // Divide function for flexbox
@@ -106,31 +106,31 @@ $column-gap: 0.50rem !default;
     width: 80%;
   }
   .columns.is-mobile > &.is-offset-three-quarters {
-    @include ltr-property("margin", 75%, false);
+    margin-left: 75%;
   }
   .columns.is-mobile > &.is-offset-two-thirds {
-    @include ltr-property("margin", 66.6666%, false);
+    margin-left: 66.6666%;
   }
   .columns.is-mobile > &.is-offset-half {
-    @include ltr-property("margin", 50%, false);
+    margin-left: 50%;
   }
   .columns.is-mobile > &.is-offset-one-third {
-    @include ltr-property("margin", 33.3333%, false);
+    margin-left: 33.3333%;
   }
   .columns.is-mobile > &.is-offset-one-quarter {
-    @include ltr-property("margin", 25%, false);
+    margin-left: 25%;
   }
   .columns.is-mobile > &.is-offset-one-fifth {
-    @include ltr-property("margin", 20%, false);
+    margin-left: 20%;
   }
   .columns.is-mobile > &.is-offset-two-fifths {
-    @include ltr-property("margin", 40%, false);
+    margin-left: 40%;
   }
   .columns.is-mobile > &.is-offset-three-fifths {
-    @include ltr-property("margin", 60%, false);
+    margin-left: 60%;
   }
   .columns.is-mobile > &.is-offset-four-fifths {
-    @include ltr-property("margin", 80%, false);
+    margin-left: 80%;
   }
   @for $i from 0 through 12 {
     .columns.is-mobile > &.is-#{$i} {
@@ -138,7 +138,7 @@ $column-gap: 0.50rem !default;
       width: percentage(divide($i, 12));
     }
     .columns.is-mobile > &.is-offset-#{$i} {
-      @include ltr-property("margin", percentage(divide($i, 12)), false);
+      margin-left: percentage(divide($i, 12));
     }
   }
   @include mobile {
@@ -187,31 +187,31 @@ $column-gap: 0.50rem !default;
       width: 80%;
     }
     &.is-offset-three-quarters-mobile {
-      @include ltr-property("margin", 75%, false);
+      margin-left: 75%;
     }
     &.is-offset-two-thirds-mobile {
-      @include ltr-property("margin", 66.6666%, false);
+      margin-left: 66.6666%;
     }
     &.is-offset-half-mobile {
-      @include ltr-property("margin", 50%, false);
+      margin-left: 50%;
     }
     &.is-offset-one-third-mobile {
-      @include ltr-property("margin", 33.3333%, false);
+      margin-left: 33.3333%;
     }
     &.is-offset-one-quarter-mobile {
-      @include ltr-property("margin", 25%, false);
+      margin-left: 25%;
     }
     &.is-offset-one-fifth-mobile {
-      @include ltr-property("margin", 20%, false);
+      margin-left: 20%;
     }
     &.is-offset-two-fifths-mobile {
-      @include ltr-property("margin", 40%, false);
+      margin-left: 40%;
     }
     &.is-offset-three-fifths-mobile {
-      @include ltr-property("margin", 60%, false);
+      margin-left: 60%;
     }
     &.is-offset-four-fifths-mobile {
-      @include ltr-property("margin", 80%, false);
+      margin-left: 80%;
     }
     @for $i from 0 through 12 {
       &.is-#{$i}-mobile {
@@ -219,7 +219,7 @@ $column-gap: 0.50rem !default;
         width: percentage(divide($i, 12));
       }
       &.is-offset-#{$i}-mobile {
-        @include ltr-property("margin", percentage(divide($i, 12)), false);
+        margin-left: percentage(divide($i, 12));
       }
     }
   }
@@ -281,39 +281,39 @@ $column-gap: 0.50rem !default;
     }
     &.is-offset-three-quarters,
     &.is-offset-three-quarters-tablet {
-      @include ltr-property("margin", 75%, false);
+      margin-left: 75%;
     }
     &.is-offset-two-thirds,
     &.is-offset-two-thirds-tablet {
-      @include ltr-property("margin", 66.6666%, false);
+      margin-left: 66.6666%;
     }
     &.is-offset-half,
     &.is-offset-half-tablet {
-      @include ltr-property("margin", 50%, false);
+      margin-left: 50%;
     }
     &.is-offset-one-third,
     &.is-offset-one-third-tablet {
-      @include ltr-property("margin", 33.3333%, false);
+      margin-left: 33.3333%;
     }
     &.is-offset-one-quarter,
     &.is-offset-one-quarter-tablet {
-      @include ltr-property("margin", 25%, false);
+      margin-left: 25%;
     }
     &.is-offset-one-fifth,
     &.is-offset-one-fifth-tablet {
-      @include ltr-property("margin", 20%, false);
+      margin-left: 20%;
     }
     &.is-offset-two-fifths,
     &.is-offset-two-fifths-tablet {
-      @include ltr-property("margin", 40%, false);
+      margin-left: 40%;
     }
     &.is-offset-three-fifths,
     &.is-offset-three-fifths-tablet {
-      @include ltr-property("margin", 60%, false);
+      margin-left: 60%;
     }
     &.is-offset-four-fifths,
     &.is-offset-four-fifths-tablet {
-      @include ltr-property("margin", 80%, false);
+      margin-left: 80%;
     }
     @for $i from 0 through 12 {
       &.is-#{$i},
@@ -323,7 +323,7 @@ $column-gap: 0.50rem !default;
       }
       &.is-offset-#{$i},
       &.is-offset-#{$i}-tablet {
-        @include ltr-property("margin", percentage(divide($i, 12)), false);
+        margin-left: percentage(divide($i, 12));
       }
     }
   }
@@ -373,31 +373,31 @@ $column-gap: 0.50rem !default;
       width: 80%;
     }
     &.is-offset-three-quarters-touch {
-      @include ltr-property("margin", 75%, false);
+      margin-left: 75%;
     }
     &.is-offset-two-thirds-touch {
-      @include ltr-property("margin", 66.6666%, false);
+      margin-left: 66.6666%;
     }
     &.is-offset-half-touch {
-      @include ltr-property("margin", 50%, false);
+      margin-left: 50%;
     }
     &.is-offset-one-third-touch {
-      @include ltr-property("margin", 33.3333%, false);
+      margin-left: 33.3333%;
     }
     &.is-offset-one-quarter-touch {
-      @include ltr-property("margin", 25%, false);
+      margin-left: 25%;
     }
     &.is-offset-one-fifth-touch {
-      @include ltr-property("margin", 20%, false);
+      margin-left: 20%;
     }
     &.is-offset-two-fifths-touch {
-      @include ltr-property("margin", 40%, false);
+      margin-left: 40%;
     }
     &.is-offset-three-fifths-touch {
-      @include ltr-property("margin", 60%, false);
+      margin-left: 60%;
     }
     &.is-offset-four-fifths-touch {
-      @include ltr-property("margin", 80%, false);
+      margin-left: 80%;
     }
     @for $i from 0 through 12 {
       &.is-#{$i}-touch {
@@ -405,7 +405,7 @@ $column-gap: 0.50rem !default;
         width: percentage(divide($i, 12));
       }
       &.is-offset-#{$i}-touch {
-        @include ltr-property("margin", percentage(divide($i, 12)), false);
+        margin-left: percentage(divide($i, 12));
       }
     }
   }
@@ -455,31 +455,31 @@ $column-gap: 0.50rem !default;
       width: 80%;
     }
     &.is-offset-three-quarters-desktop {
-      @include ltr-property("margin", 75%, false);
+      margin-left: 75%;
     }
     &.is-offset-two-thirds-desktop {
-      @include ltr-property("margin", 66.6666%, false);
+      margin-left: 66.6666%;
     }
     &.is-offset-half-desktop {
-      @include ltr-property("margin", 50%, false);
+      margin-left: 50%;
     }
     &.is-offset-one-third-desktop {
-      @include ltr-property("margin", 33.3333%, false);
+      margin-left: 33.3333%;
     }
     &.is-offset-one-quarter-desktop {
-      @include ltr-property("margin", 25%, false);
+      margin-left: 25%;
     }
     &.is-offset-one-fifth-desktop {
-      @include ltr-property("margin", 20%, false);
+      margin-left: 20%;
     }
     &.is-offset-two-fifths-desktop {
-      @include ltr-property("margin", 40%, false);
+      margin-left: 40%;
     }
     &.is-offset-three-fifths-desktop {
-      @include ltr-property("margin", 60%, false);
+      margin-left: 60%;
     }
     &.is-offset-four-fifths-desktop {
-      @include ltr-property("margin", 80%, false);
+      margin-left: 80%;
     }
     @for $i from 0 through 12 {
       &.is-#{$i}-desktop {
@@ -487,14 +487,14 @@ $column-gap: 0.50rem !default;
         width: percentage(divide($i, 12));
       }
       &.is-offset-#{$i}-desktop {
-        @include ltr-property("margin", percentage(divide($i, 12)), false);
+        margin-left: percentage(divide($i, 12));
       }
     }
   }
 }
 .columns {
-  @include ltr-property("margin", (-$column-gap), false);
-  @include ltr-property("margin", (-$column-gap));
+  margin-left: (-$column-gap);
+  margin-right: (-$column-gap);
   margin-top: (-$column-gap);
   &:last-child {
     margin-bottom: (-$column-gap);
@@ -507,8 +507,8 @@ $column-gap: 0.50rem !default;
     justify-content: center;
   }
   &.is-gapless {
-    @include ltr-property("margin", 0, false);
-    @include ltr-property("margin", 0);
+    margin-left: 0;
+    margin-right: 0;
     margin-top: 0;
     & > .column {
       margin: 0;
@@ -538,47 +538,6 @@ $column-gap: 0.50rem !default;
   @include desktop {    // Modifiers
     &.is-desktop {
       display: flex;
-    }
-  }
-}
-@if $variable-columns {
-  .columns.is-variable {
-    --columnGap: 0.75rem;
-    @include ltr-property("margin", calc(-1 * var(columnGap)), false);
-    @include ltr-property("margin", calc(-1 * var(columnGap)));
-    > .column {
-      padding-left: var(columnGap);
-      padding-right: var(columnGap);
-    }
-    @for $i from 0 through 8 {
-      &.is-#{$i} {
-        --columnGap: #{$i * 0.25rem};
-      }
-      @include mobile {
-        &.is-#{$i}-mobile {
-          --columnGap: #{$i * 0.25rem};
-        }
-      }
-      @include tablet {
-        &.is-#{$i}-tablet {
-          --columnGap: #{$i * 0.25rem};
-        }
-      }
-      @include tablet-only {
-        &.is-#{$i}-tablet-only {
-          --columnGap: #{$i * 0.25rem};
-        }
-      }
-      @include touch {
-        &.is-#{$i}-touch {
-          --columnGap: #{$i * 0.25rem};
-        }
-      }
-      @include desktop {
-        &.is-#{$i}-desktop {
-          --columnGap: #{$i * 0.25rem};
-        }
-      }
     }
   }
 }
