--- a/_sass/yolo/_responsiveness.scss
+++ b/_sass/yolo/_responsiveness.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // Responsiveness classes
 // ----------------------------------------------------------------------------
-@import "variables";
+@import "base/variables";
 
 @media (min-width: $tablet) {
   html {
@@ -34,21 +34,21 @@
     @content;
   }
 }
-@mixin ltr-property($property, $spacing, $right: true) {
-  $normal: if($right, "right", "left");
-  $opposite: if($right, "left", "right");
-  @if $rtl {
-    #{$property}-#{$opposite}: $spacing;
-  }  @else {
-    #{$property}-#{$normal}: $spacing;
-  }
-}
-@mixin ltr-position($spacing, $right: true) {
-  $normal: if($right, "right", "left");
-  $opposite: if($right, "left", "right");
-  @if $rtl {
-    #{$opposite}: $spacing;
-  }  @else {
-    #{$normal}: $spacing;
-  }
-}
+//@mixin ltr-property($property, $spacing, $right: true) {
+//  $normal: if($right, "right", "left");
+//  $opposite: if($right, "left", "right");
+//  @if $rtl {
+//    #{$property}-#{$opposite}: $spacing;
+//  }  @else {
+//    #{$property}-#{$normal}: $spacing;
+//  }
+//}
+//@mixin ltr-position($spacing, $right: true) {
+//  $normal: if($right, "right", "left");
+//  $opposite: if($right, "left", "right");
+//  @if $rtl {
+//    #{$opposite}: $spacing;
+//  }  @else {
+//    #{$normal}: $spacing;
+//  }
+//}
