--- a/_sass/yolo/_syntax.scss
+++ b/_sass/yolo/_syntax.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // Syntax highlighting
 // ----------------------------------------------------------------------------
-@import "variables";
+@import "base/variables";
 
 .highlighter-rouge, .highlight {
   position: relative;
