--- a/_sass/yolo/base/_base.scss
+++ b/_sass/yolo/base/_base.scss
@@ -17,69 +17,65 @@ body {
 
 a {
   text-decoration: none;
-}
-
-a:hover, a:focus {
-  text-decoration: underline;
+  &:hover {
+    text-decoration: underline;
+  }
+  &:focus {
+    text-decoration: underline;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 0.5rem 0;
+  margin: 1rem 0;
   line-height: 1;
   text-rendering: optimizeLegibility;
 }
 
 h1 {
-  margin-top: 1.5rem;
   font-size: 2.75rem;
-  margin-bottom: 1rem;
 }
 
 h2 {
-  margin-top: 1.5rem;
   font-size: 2rem;
-  margin-bottom: 1rem;
 }
 
 h3 {
-  margin-top: 1.5rem;
   font-size: 1.75rem;
-  margin-bottom: 1rem;
 }
 
 h4 {
-  margin-top: 1.5rem;
   font-size: 1.5rem;
-  margin-bottom: 1rem;
 }
 
 h5 {
-  margin-top: 1.5rem;
   font-size: 1.25rem;
-  margin-bottom: 1rem;
 }
 
 h6 {
-  margin-top: 1.5rem;
   font-size: 1rem;
-  margin-bottom: 1rem;
 }
 
-p, ul, ol, dl, table, pre, blockquote {
+p, dl {
   margin-top: 0;
   margin-bottom: 1rem;
 }
 
-pre, code {
+code {
   font-family: var(--font-family-monospace);
   overflow-x: auto;
 }
 
 pre {
+  font-family: var(--font-family-monospace);
+  overflow-x: auto;
+  margin-top: 0;
+  margin-bottom: 1rem;
   font-size: 0.8rem;
 }
 
 ul, ol {
+  margin-top: 0;
+  margin-bottom: 1rem;
   padding-left: 1.5rem;
 }
 
@@ -88,20 +84,13 @@ dd {
 }
 
 blockquote {
-  margin-left: 0;
-  margin-right: 0;
+  margin: 0 0 1rem;
   padding: .5rem 1rem;
-}
-
-blockquote p:last-child {
-  margin-bottom: 0;
-}
-
-hr {
-  border: none;
-  margin: 1.5rem 0;
-  position: relative;
-  top: -1px;
+  p {
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 ul {
@@ -116,8 +105,17 @@ ol {
   padding-left: 2.5rem;
 }
 
+hr {
+  border: none;
+  margin: 1.5rem 0;
+  position: relative;
+  top: -1px;
+}
+
 table {
   width: 100%;
+  margin-top: 0;
+  margin-bottom: 1rem;
   vertical-align: middle;
   text-align: left;
   border-radius: 0.3em;
@@ -153,6 +151,9 @@ table {
 }
 
 figure {
+  display: block;
+  margin: 0;
+  padding: 0;
   figcaption {
     padding-top: 0.25em;
     padding-bottom: 0.25em;
