--- a/_sass/yolo/brand/_syntax.scss
+++ b/_sass/yolo/brand/_syntax.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // Syntax highlighting
 // ----------------------------------------------------------------------------
-@import "base/variables";
+@import "../base/variables";
 
 .highlighter-rouge, .highlight {
   position: relative;
