--- a/_sass/yolo/core/_layout.scss
+++ b/_sass/yolo/core/_layout.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // Layout support
 // ----------------------------------------------------------------------------
-@import "base/variables";
+@import "../base/variables";
 @import "responsiveness";
 
 // Divide function for flexbox
