--- a/_includes/components/prezo.html
+++ b/_includes/components/prezo.html
@@ -5,8 +5,8 @@
 {% for prezo in prezos %}
 {% if prezo.title == prezo_title %}
 <strong>{{ prezo.description }}</strong>
-<div class="prezo-iframe-container {{ prezo_aspect_ratio }}">
-    <iframe class="prezo-responsive-iframe" src="{{ prezo.src }}"></iframe>
+<div class="yolo-prezo-container {{ prezo_aspect_ratio }}">
+    <iframe class="yolo-prezo-iframe" src="{{ prezo.src }}"></iframe>
 </div>
 {% endif %}
 {% endfor %}
