--- a/_sass/yolo/brand/_all.scss
+++ b/_sass/yolo/brand/_all.scss
@@ -1,7 +1,6 @@
 @charset "utf-8";
 // ----------------------------------------------------------------------------
-// Base scss module
+// Brand scss module
 // ----------------------------------------------------------------------------
-@import "variables";
-@import "normalize";
-@import "base";
+@import "theme";
+@import "syntax";
