--- a/_sass/yolo/components/_lightbox.scss
+++ b/_sass/yolo/components/_lightbox.scss
@@ -1,6 +1,8 @@
 // ----------------------------------------------------------------------------
 // lightbox stylesheet
 // ----------------------------------------------------------------------------
+@import "../base/variables";
+
 .lb-container {
   flex-grow: 1;
   margin: auto;
@@ -17,18 +19,18 @@
   width: 100%;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: $desktop) {
   .lb-container {
-    max-width: 960px;
+    max-width: $desktop - (2 * $gap);
   }
 }
 
 .lb-square {
-  width: 100%;
   aspect-ratio: 1/1;
-  object-fit: cover;
   border-radius: 0.256em;
   margin: 1rem 0;
+  object-fit: cover;
+  width: 100%;
 }
 
 .lb-item {
@@ -41,36 +43,36 @@
 
 .lb-modal {
   display: none;
-  position: fixed;
-  z-index: 100;
-  padding-top: 5rem;
+  height: 100%;
   left: 0;
+  overflow: auto;
+  padding-top: 5rem;
+  position: fixed;
   top: 0;
   width: 100%;
-  height: 100%;
-  overflow: auto;
+  z-index: 100;
 }
 
 .lb-modal-content {
-  position: relative;
   margin: auto;
-  padding: 0;
-  width: 100%;
   max-width: 100%;
+  padding: 0;
+  position: relative;
+  width: 100%;
 }
 
 .lb-close {
-  position: absolute;
-  top: 0.5rem;
-  right: 1.5rem;
   font-size: $size-2;
+  position: absolute;
+  right: 1.5rem;
+  top: 0.5rem;
   transition: 0.3s;
 }
 
 .lb-close:hover,
 .lb-close:focus {
-  text-decoration: none;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .lb-slides {
@@ -78,42 +80,40 @@
 }
 
 .lb-nav {
-  position: absolute;
-  display: block;
-  top: 0;
+  -webkit-user-select: none;
   bottom: 0;
-  width: 5%;
-  height: 100%;
   color: transparent;
-  text-align: center;
-  vertical-align: middle;
+  display: block;
   font-size: $size-4;
+  height: 100%;
+  position: absolute;
+  text-align: center;
+  top: 0;
   transition: 0.6s ease;
   user-select: none;
-  -webkit-user-select: none;
-
+  vertical-align: middle;
+  width: 5%;
   &:before {
     content: '';
-    height: 100%;
     display: inline-block;
+    height: 100%;
     vertical-align: middle;
   }
-
   &:hover {
     text-decoration: none;
   }
 }
 
 .lb-prev {
-  left: 10%;
-  right: 0;
   border-radius: .3rem 0 0 .3rem;
   color: transparent;
+  left: 10%;
+  right: 0;
 }
 
 .lb-next {
-  left: 85%;
-  right: 100%;
   border-radius: 0 .3rem .3rem 0;
   color: transparent;
+  left: 85%;
+  right: 100%;
 }
