--- a/_sass/yolo/components/_other.scss
+++ b/_sass/yolo/components/_other.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
-// yolo specific classes
+// other/misc classes
 // ----------------------------------------------------------------------------
-@import "base/variables";
+@import "../base/variables";
 
 // Yolo page header
 .yolo-header {
@@ -26,48 +26,24 @@
   }
 }
 
-.toggle-flexbox {
+.yolo-footer {
+  text-align: right;
+}
+
+.toggle-container {
   position: relative;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   height: $size-3;
   font-size: $size-3;
-}
 
-.toggle-button {
-  position: absolute;
-  transition: color .25s ease;
-  user-select: none;
-  cursor: pointer;
-}
-
-.yolo-footer {
-  text-align: right;
-}
-
-// Left align content, right margin auto, left margin 0
-.left {
-  margin-right: auto;
-  margin-left: 0;
-}
-
-// Center content, left/right auto, top/bottom 0 margin
-.center {
-  margin: 0 auto;
-}
-
-// No display
-.no-display {
-  display: none;
-  overflow: auto;
-}
-
-// No bullets on lists
-.no-bullets {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+  .toggle-button {
+    position: absolute;
+    transition: color .25s ease;
+    user-select: none;
+    cursor: pointer;
+  }
 }
 
 // captioned elements
@@ -102,7 +78,7 @@
 }
 
 // embedded video styling
-.video {
+.yolo-video {
   width: 100%;
   iframe {
     width: 300px;
@@ -113,7 +89,7 @@
 }
 
 // pill styling
-.pill {
+.yolo-pill {
   display: inline-flex;
   align-items: center;
   text-decoration: none;
@@ -126,7 +102,7 @@
 }
 
 // prezo styling
-.prezo-iframe-container {
+.yolo-prezo-container {
   position: relative;
   overflow: hidden;
   width: 100%;
@@ -149,7 +125,7 @@
 }
 
 // Style the iframe to fit in the iframe-container div with full height and width
-.prezo-responsive-iframe {
+.yolo-prezo-iframe {
   position: absolute;
   top: 0;
   left: 0;
@@ -157,29 +133,4 @@
   right: 0;
   width: 100%;
   height: 100%;
-}
-
-// Syntax highlighting text color based on background color
-@function text-color($bg, $syntax) {
-  @if(lightness($bg) > 50) {
-    // syntax-on-light
-    @return map-get($syntax-on-light, $syntax);
-  } @else {
-    // syntax-on-dark
-    @return map-get($syntax-on-dark, $syntax);
-  }
-}
-
-@mixin dynamic-color($bg, $syntax) {
-  color: text-color($bg, $syntax);
-}
-
-// material-icon sizes
-.material-icons.md-18 { font-size: 18px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-48 { font-size: 48px; }
-
-.material-icons {
-  vertical-align: middle;
 }
