--- a/_sass/yolo/components/_sidebar.scss
+++ b/_sass/yolo/components/_sidebar.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // Sidebar support
 // ----------------------------------------------------------------------------
-@import "responsiveness";
+@import "../core/responsiveness";
 
 .sidebar {
   position: fixed;
