--- a/_sass/yolo/core/_typography.scss
+++ b/_sass/yolo/core/_typography.scss
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
 // typography stylesheet
 // ----------------------------------------------------------------------------
-@import "base/variables";
+@import "../base/variables";
 @import "responsiveness";
 
 $sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 $size-7 !default;
