--- a/css/main.scss
+++ b/css/main.scss
@@ -2,20 +2,21 @@
 # Main scss file
 ---
 @charset "utf-8";
-
-@import "yolo/base/_all";
-@import "yolo/themes/{{ site.data.settings.theme.name | default: 'yolo' }}";
-@import "yolo/syntax-themes/{{ site.data.settings.theme.syntax | default: 'yolo' }}";
-@import "yolo/theme";
-@import "yolo/responsiveness";
-@import "yolo/layout";
-@import "yolo/typography";
-@import "yolo/syntax";
-@import "yolo/images";
-@import "yolo/lightbox";
-@import "yolo/navigation";
-@import "yolo/yolo";
-
+// ----------------------------------------------------------------------------
+// Main scss modules:
+// 1. base
+// 2. core
+// 3. components
+// 4. brand
+// 5. yolo
+// ----------------------------------------------------------------------------
+@import "yolo/base/all";
+@import "yolo/utilities/all";
+@import "yolo/core/all";
+@import "yolo/components/all";
 {% if site.data.settings.sidebar %}
-@import "yolo/sidebar";
+@import "yolo/components/sidebar";
 {% endif %}
+@import "yolo/brand/theme/{{ site.data.settings.brand.theme | default: 'yolo' }}";
+@import "yolo/brand/syntax/{{ site.data.settings.brand.syntax | default: 'yolo' }}";
+@import "yolo/brand/all";
