WIP sass refactor

--- a/_includes/components/code.html
+++ b/_includes/components/code.html
@@ -1,4 +1,4 @@
-<div class="code-header">
+<div class="yolo-code-header">
     <span class="code-label">
         {% if include.label %}
         {{ include.label }}
