--- a/_sass/yolo/brand/_theme.scss
+++ b/_sass/yolo/brand/_theme.scss
@@ -152,7 +152,7 @@
     color: var(--on-primary-color);
   }
 
-  .code-header {
+  .yolo-code-header {
     background-color: var(--secondary-color);
     color: var(--on-secondary-color);
     font-family: var(--font-family-secondary);
