--- a/_sass/yolo/components/_other.scss
+++ b/_sass/yolo/components/_other.scss
@@ -60,7 +60,7 @@
 }
 
 // copy code header
-.code-header {
+.yolo-code-header {
   padding: 0.3em 0.3em 0.3em 0.4em;
   border-top-left-radius: 0.3em;
   border-top-right-radius: 0.3em;
